--- a/myapp/templates/myapp/book_confirm_delete.html
+++ b/myapp/templates/myapp/book_confirm_delete.html
@@ -1,15 +1,17 @@
-{% extends 'myapp/base.html' %}
+{% extends 'myapp/base.html' %}  
 
-{% block title %}Delete Book{% endblock %}
+{% block title %}Delete Book{% endblock %}  
 
-{% block content %}
-    <h1 class="mb-4 text-danger">Delete Book</h1>
-    <p>Are you sure you want to delete the book titled <strong>{{ object.title }}</strong>?</p>
-    
-    <form method="post">
-        {% csrf_token %}
-        <button type="submit" class="btn btn-danger">Delete</button>
-        <a href="{% url 'book_list' %}" class="btn btn-secondary">Cancel</a>
-    </form>
+{% block content %}  
+<div class="container my-5">  
+    <div class="card shadow-lg p-4 border-0 text-center">  
+        <h1 class="text-danger mb-4">Delete Book</h1>  
+        <p class="lead">Are you sure you want to delete the book titled <strong>{{ object.title }}</strong>?</p>  
+        <form method="post" class="d-inline">  
+            {% csrf_token %}  
+            <button type="submit" class="btn btn-danger btn-lg">Delete</button>  
+            <a href="{% url 'book_list' %}" class="btn btn-secondary btn-lg ms-3">Cancel</a>
+        </form>  
+    </div>  
+</div>  
 {% endblock %}
-
