--- a/myapp/templates/myapp/book_detail.html
+++ b/myapp/templates/myapp/book_detail.html
@@ -1,30 +1,32 @@
-{% extends 'myapp/base.html' %}
+{% extends 'myapp/base.html' %}  
 
-{% block title %}Book Details - {{ book.title }}{% endblock %}
+{% block title %}Book Details - {{ book.title }}{% endblock %}  
 
-{% block content %}
-<div class="container">
-    <h1 class="my-4">{{ book.title }}</h1>
-
-    <div class="row">
-        <div class="col-md-6">
-            <h3>Author</h3>
-            <p>{{ book.author }}</p>
-        </div>
-        <div class="col-md-6">
-            <h3>Book Details</h3>
-            <ul class="list-group">
-                <li class="list-group-item"><strong>Title:</strong> {{ book.title }}</li>
-                <li class="list-group-item"><strong>Author:</strong> {{ book.author }}</li>
-                <li class="list-group-item"><strong>Published Date:</strong> {{ book.published_date }}</li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="mt-4">
-        <a href="{% url 'book_list' %}" class="btn btn-secondary">Back to Book List</a>
-        <a href="{% url 'book_update' book.pk %}" class="btn btn-warning">Edit</a>
-        <a href="{% url 'book_delete' book.pk %}" class="btn btn-danger">Delete</a>
-    </div>
-</div>
+{% block content %}  
+<div class="container my-5">  
+    <div class="card shadow-lg p-4 border-0">  
+        <div class="row g-4">  
+            <div class="col-md-6">  
+                {% if book.image and book.image.url %}  
+                    <img src="{{ book.image.url }}" class="img-fluid rounded mb-3" alt="{{ book.title }}">  
+                {% else %}  
+                    <img src="https://via.placeholder.com/250" class="img-fluid rounded mb-3" alt="No Image Available">  
+                {% endif %}  
+            </div>  
+            <div class="col-md-6">  
+                <h1 class="mb-3 text-primary">{{ book.title }}</h1>  
+                <h5 class="mb-2 text-muted"><strong>Author:</strong> {{ book.author }}</h5>  
+                <p class="text-muted mb-4"><strong>Description:</strong> {{ book.description }}</p>  
+                <ul class="list-group mb-4">  
+                    <li class="list-group-item"><strong>Published Date:</strong> {{ book.published_date }}</li>  
+                </ul>  
+                <div class="d-flex justify-content-between">  
+                    <a href="{% url 'book_list' %}" class="btn btn-secondary">Back to Book List</a>  
+                    <a href="{% url 'book_update' book.pk %}" class="btn btn-warning">Edit</a>  
+                    <a href="{% url 'book_delete' book.pk %}" class="btn btn-danger">Delete</a>  
+                </div>  
+            </div>  
+        </div>  
+    </div>  
+</div>  
 {% endblock %}
